# haskell-deepdive--

./: .gitignore  README.md
Haskell Excercises & Code/: Notes.md
Haskell Excercises & Code/Alejandro - Book of Monads/: 5c6d7d7b-02fa-4e67-b84b-aac2ee3b3db7.hs  MonadicCode.hs  ParserComb.hs  TicTacToe.hs  jsonParser.hs  monadic.hs  parser.cabal  practice.hs  testingValidInstance.hs
Haskell Excercises & Code/Alejandro - Book of Monads/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell Excercises & Code/Alejandro - Book of Monads/dist-newstyle/packagedb/ghc-9.2.1/: package.cache  parsing-0.1.0.0-inplace.conf
Haskell Excercises & Code/Chapter1 - Lambda Calc/: learn.hs  test.hs
Haskell Excercises & Code/Chapter10 - Folding Lists/: chapterEx.hs  chapterExFold.hs  database.hs  folding01.hs
Haskell Excercises & Code/Chapter10- Folding Lists/: chapterEx.hs
Haskell Excercises & Code/Chapter11 - Algebraic Datatypes/: algebra01.hs  binaryToList.hs  binaryTree.hs  chapterEx.hs  functions.hs  goatClass.hs  programmer.hs  sumProd.hs
Haskell Excercises & Code/Chapter12 - Signalign Adversity/: binaryTrees.hs  chapterEx.hs  moreExer.hs
Haskell Excercises & Code/Chapter13 - Building Projects/: Dogs.hs  Hangman.hs  Main.hs  chapterEx.hs  hello.cabal  notes.md  personConstr.hs
Haskell Excercises & Code/Chapter14 - Testing/: Addition.hs  ChapterEx.hs  Trivial.hs  addition.cabal
Haskell Excercises & Code/Chapter15 - Monoid Semigroup/: Madness.hs  chapterEx.hs  monoid.hs  moreExer.hs  (+1 more)
(+130 files in other folders)
