name: parsing
version: 0.1.0.0
license-file: LICENSE
author: Chicken Little
maintainer: sky@isfalling.org
category: Text
build-type: Simple
cabal-version: >=1.10

library
 exposed-modules: JSONParser
                  , Monadic
 ghc-options: -Wall -fwarn-tabs
 build-depends: base >=4.7 && <5
                , mtl
                , random
 hs-source-dirs: .
 default-language: Haskell2010